--- a/notebooks/classification_modelling.ipynb
+++ b/notebooks/classification_modelling.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "ac78aab7",
    "metadata": {
     "tags": [
@@ -28,122 +28,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "085f59f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import json\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import sys\n",
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "# Lấy đường dẫn thư mục gốc (lùi ra 1 cấp từ notebooks)\n",
-    "PROJECT_ROOT = Path(os.getcwd()).parent.resolve()\n",
-    "\n",
-    "# Thêm thư mục gốc vào sys.path để Python thấy folder 'src'\n",
-    "if str(PROJECT_ROOT) not in sys.path:\n",
-    "    sys.path.append(str(PROJECT_ROOT))\n",
-    "from src.classification_library import time_split, train_classifier, AQI_CLASSES\n",
-    "\n",
-    "PROJECT_ROOT = Path('.').resolve()\n",
-    "dataset_path = (PROJECT_ROOT / DATASET_PATH).resolve()\n",
-    "metrics_path = (PROJECT_ROOT / METRICS_PATH).resolve()\n",
-    "pred_path = (PROJECT_ROOT / PRED_SAMPLE_PATH).resolve()\n",
-    "metrics_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "pred_path.parent.mkdir(parents=True, exist_ok=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "3be4f4da",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape: (412935, 55)\n"
+      "Features: ['hour', 'SO2', 'NO2', 'CO', 'O3', 'TEMP', 'PRES', 'DEWP', 'RAIN', 'wd', 'WSPM', 'hour_sin', 'hour_cos', 'dow', 'is_weekend', 'is_labeled']\n",
+      "Train Size: 19583 | Test Size: 16728\n",
+      "Accuracy: 0.6653\n",
+      "F1-Macro: 0.4868\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.96      0.89      7705\n",
+      "           1       0.42      0.45      0.43      2301\n",
+      "           2       0.37      0.33      0.35      1924\n",
+      "           3       0.26      0.07      0.12      1075\n",
+      "           4       0.53      0.51      0.52      2149\n",
+      "           5       0.70      0.54      0.61      1574\n",
+      "\n",
+      "    accuracy                           0.67     16728\n",
+      "   macro avg       0.52      0.48      0.49     16728\n",
+      "weighted avg       0.63      0.67      0.64     16728\n",
+      "\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# --- Load Data ---\n",
+    "try:\n",
+    "    df = pd.read_parquet(\"data/processed/dataset_for_semi.parquet\")\n",
+    "except:\n",
+    "    df = pd.read_parquet(OUTPUT_SEMI_DATASET_PATH)\n",
+    "\n",
+    "# --- Target Processing (6 Bins) ---\n",
+    "df = df.dropna(subset=['PM2.5'])\n",
+    "df['aqi_class'] = pd.cut(df['PM2.5'], \n",
+    "                         bins=[-1, 35, 75, 115, 150, 250, 9999], \n",
+    "                         labels=[0, 1, 2, 3, 4, 5])\n",
+    "df = df.dropna(subset=['aqi_class'])\n",
+    "df['aqi_class'] = df['aqi_class'].astype(int)\n",
+    "\n",
+    "# --- Feature Selection ---\n",
+    "time_cols = [c for c in df.columns if 'date' in c or 'time' in c]\n",
+    "exclude = time_cols + ['station', 'year', 'month', 'day', 'aqi_class', \n",
+    "                       'PM2.5', 'No', 'pm25_24h', 'PM10', 'pm25_lag_1', 'pm25_lag_2']\n",
+    "\n",
+    "features = [c for c in df.columns if c not in exclude and 'PM10' not in c and 'lag' not in c]\n",
+    "print(f\"Features: {features}\")\n",
+    "\n",
+    "# --- Encoding ---\n",
+    "for c in features:\n",
+    "    if df[c].dtype == 'object':\n",
+    "        df[c] = LabelEncoder().fit_transform(df[c].astype(str))\n",
+    "\n",
+    "# --- Data Split ---\n",
+    "cutoff_dt = pd.to_datetime(CUTOFF)\n",
+    "time_col = 'datetime' if 'datetime' in df.columns else 'date'\n",
+    "df[time_col] = pd.to_datetime(df[time_col])\n",
+    "\n",
+    "mask_train_time = df[time_col] < cutoff_dt\n",
+    "mask_labeled = df['is_labeled'] == True\n",
+    "\n",
+    "X_train = df.loc[mask_train_time & mask_labeled, features]\n",
+    "y_train = df.loc[mask_train_time & mask_labeled, 'aqi_class']\n",
+    "\n",
+    "X_test = df.loc[~mask_train_time, features]\n",
+    "y_test = df.loc[~mask_train_time, 'aqi_class']\n",
+    "\n",
+    "print(f\"Train Size: {len(X_train)} | Test Size: {len(X_test)}\")\n",
+    "\n",
+    "# --- Train & Eval ---\n",
+    "clf = RandomForestClassifier(n_estimators=100, random_state=42, class_weight='balanced', n_jobs=-1)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = clf.predict(X_test)\n",
+    "f1 = f1_score(y_test, y_pred, average='macro')\n",
+    "acc = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Accuracy: {acc:.4f}\")\n",
+    "print(f\"F1-Macro: {f1:.4f}\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "# --- Save Metrics ---\n",
+    "metrics_path = Path(\"data/processed/metrics.json\")\n",
+    "metrics_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "with open(metrics_path, \"w\") as f:\n",
+    "    json.dump({\"accuracy\": acc, \"f1_macro\": f1}, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3be4f4da",
+   "metadata": {},
+   "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>station</th>\n",
-       "      <th>aqi_class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2013-03-01 17:00:00</td>\n",
-       "      <td>Aotizhongxin</td>\n",
-       "      <td>Good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2013-03-01 18:00:00</td>\n",
-       "      <td>Aotizhongxin</td>\n",
-       "      <td>Good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2013-03-01 19:00:00</td>\n",
-       "      <td>Aotizhongxin</td>\n",
-       "      <td>Good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2013-03-01 20:00:00</td>\n",
-       "      <td>Aotizhongxin</td>\n",
-       "      <td>Good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2013-03-01 21:00:00</td>\n",
-       "      <td>Aotizhongxin</td>\n",
-       "      <td>Good</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             datetime       station aqi_class\n",
-       "0 2013-03-01 17:00:00  Aotizhongxin      Good\n",
-       "1 2013-03-01 18:00:00  Aotizhongxin      Good\n",
-       "2 2013-03-01 19:00:00  Aotizhongxin      Good\n",
-       "3 2013-03-01 20:00:00  Aotizhongxin      Good\n",
-       "4 2013-03-01 21:00:00  Aotizhongxin      Good"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'Path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m PROJECT_ROOT \u001b[38;5;241m=\u001b[39m \u001b[43mPath\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mresolve()\n\u001b[0;32m      2\u001b[0m DATASET_PATH \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprocessed\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdataset_for_clf.parquet\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m dataset_path \u001b[38;5;241m=\u001b[39m (PROJECT_ROOT \u001b[38;5;241m/\u001b[39m DATASET_PATH)\u001b[38;5;241m.\u001b[39mresolve()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Path' is not defined"
+     ]
     }
    ],
    "source": [
@@ -158,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "da375c17",
    "metadata": {},
    "outputs": [
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a44ecf91",
    "metadata": {},
    "outputs": [
@@ -296,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9e277072",
    "metadata": {},
    "outputs": [
@@ -334,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "13de44e9",
    "metadata": {},
    "outputs": [
@@ -359,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "4f17d7f8",
    "metadata": {},
    "outputs": [
