--- a/notebooks/semi_dataset_preparation.ipynb
+++ b/notebooks/semi_dataset_preparation.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "0915c869",
    "metadata": {
     "tags": [
@@ -25,13 +25,13 @@
     "CLEANED_PATH = \"data/processed/cleaned.parquet\"\n",
     "OUTPUT_SEMI_DATASET_PATH = \"data/processed/dataset_for_semi.parquet\"\n",
     "CUTOFF = \"2017-01-01\"\n",
-    "LABEL_MISSING_FRACTION = 0.95\n",
-    "RANDOM_STATE = 42"
+    "LABEL_MISS0ING_FRACTION = 0.98\n",
+    "RANDOM_STATE = 42   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "b1a1037c",
    "metadata": {},
    "outputs": [
@@ -39,60 +39,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Đang kiểm tra file tại: D:\\3\\Data_Mining\\Mini_Prj\\air_guard\\data\\processed\\cleaned.parquet\n",
-      "Đọc dữ liệu thành công!\n",
-      "Saved: D:\\3\\Data_Mining\\Mini_Prj\\air_guard\\notebooks\\data\\processed\\dataset_for_semi.parquet\n",
-      "Rows: 420768\n",
-      "Labeled ratio: 0.08671049129211347\n"
+      "Saved: D:\\3\\Data_Mining\\Mini_Prj\\air_guard\\data\\processed\\dataset_for_semi.parquet\n",
+      "Total records: 420768\n",
+      "Train Label Ratio: 0.0196\n"
      ]
     }
    ],
    "source": [
-    "from pathlib import Path\n",
-    "import pandas as pd\n",
     "import sys\n",
-    "import os\n",
+    "import pandas as pd\n",
     "from pathlib import Path\n",
     "\n",
-    "# 1. Xác định vị trí của notebook hiện tại\n",
     "current_dir = Path('.').resolve()\n",
+    "PROJECT_ROOT = current_dir.parent if current_dir.name == 'notebooks' else current_dir\n",
+    "if str(PROJECT_ROOT) not in sys.path:\n",
+    "    sys.path.append(str(PROJECT_ROOT))\n",
     "\n",
-    "# 2. Nếu đang ở trong thư mục 'notebooks', hãy lùi ra thư mục gốc 'air_guard'\n",
-    "if current_dir.name == 'notebooks':\n",
-    "    PROJECT_ROOT = current_dir.parent\n",
-    "else:\n",
-    "    PROJECT_ROOT = current_dir\n",
-    "\n",
-    "# 3. Tạo đường dẫn đầy đủ đến file cleaned.parquet\n",
-    "# Giả sử CLEANED_PATH của bạn là \"data/processed/cleaned.parquet\"\n",
-    "full_cleaned_path = (PROJECT_ROOT / \"data\" / \"processed\" / \"cleaned.parquet\").resolve()\n",
-    "\n",
-    "print(f\"Đang kiểm tra file tại: {full_cleaned_path}\")\n",
-    "\n",
-    "# 4. Kiểm tra sự tồn tại của file trước khi đọc\n",
-    "if full_cleaned_path.exists():\n",
-    "    df = pd.read_parquet(full_cleaned_path)\n",
-    "    print(\"Đọc dữ liệu thành công!\")\n",
-    "else:\n",
-    "    print(f\"LỖI: Không tìm thấy file tại {full_cleaned_path}\")\n",
-    "    print(\"Vui lòng kiểm tra xem bạn đã chạy bước tạo file cleaned.parquet chưa.\")\n",
     "from src.semi_supervised_library import SemiDataConfig, mask_labels_time_aware\n",
     "\n",
-    "PROJECT_ROOT = Path(\".\").resolve()\n",
-    "if not (PROJECT_ROOT / \"data\").exists() and (PROJECT_ROOT.parent / \"data\").exists():\n",
-    "    PROJECT_ROOT = PROJECT_ROOT.parent.resolve()\n",
+    "in_path = PROJECT_ROOT / CLEANED_PATH\n",
+    "out_path = PROJECT_ROOT / OUTPUT_SEMI_DATASET_PATH\n",
     "\n",
+    "if not in_path.exists():\n",
+    "    raise FileNotFoundError(f\"File not found: {in_path}\")\n",
+    "\n",
+    "df = pd.read_parquet(in_path)\n",
+    "\n",
+    "req_col = 'datetime'\n",
+    "if req_col not in df.columns:\n",
+    "    renamed = False\n",
+    "    for c in ['date', 'Date', 'timestamp', 'Time']:\n",
+    "        if c in df.columns:\n",
+    "            df.rename(columns={c: req_col}, inplace=True)\n",
+    "            renamed = True\n",
+    "            break\n",
+    "    if not renamed:\n",
+    "        if all(k in df.columns for k in ['year', 'month', 'day']):\n",
+    "            df[req_col] = pd.to_datetime(df[['year', 'month', 'day']])\n",
+    "        else:\n",
+    "            raise KeyError(f\"Missing time column '{req_col}'\")\n",
+    "\n",
+    "df[req_col] = pd.to_datetime(df[req_col])\n",
     "\n",
     "cfg = SemiDataConfig(cutoff=CUTOFF, random_state=int(RANDOM_STATE))\n",
-    "df2 = mask_labels_time_aware(df, cfg, missing_fraction=float(LABEL_MISSING_FRACTION))\n",
+    "df_processed = mask_labels_time_aware(df, cfg, missing_fraction=float(LABEL_MISS0ING_FRACTION))\n",
     "\n",
-    "out_path = (PROJECT_ROOT / OUTPUT_SEMI_DATASET_PATH).resolve()\n",
     "out_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "df2.to_parquet(out_path, index=False)\n",
+    "df_processed.to_parquet(out_path, index=False)\n",
     "\n",
-    "print(\"Saved:\", out_path)\n",
-    "print(\"Rows:\", len(df2))\n",
-    "print(\"Labeled ratio:\", float(df2[\"is_labeled\"].mean()) if \"is_labeled\" in df2.columns else None)"
+    "print(f\"Saved: {out_path}\")\n",
+    "print(f\"Total records: {len(df_processed)}\")\n",
+    "\n",
+    "if \"is_labeled\" in df_processed.columns:\n",
+    "    train_ratio = df_processed[df_processed[req_col] < pd.to_datetime(CUTOFF)]['is_labeled'].mean()\n",
+    "    print(f\"Train Label Ratio: {train_ratio:.4f}\")"
    ]
   }
  ],
